@@ -8,6 +8,8 @@ Version 6.2.1
 - fixed unsigned types in views when used as entities (bug # 47872) 
 - now exposing the MySqlDecimal type along with GetMySqlDecimal methods on data reader (bug #48100)    
 - applied user-suggested patch to enable type-safe cloning (bug #48460)
+- fixed encrypt keyword that was no longer supported in connection strings. It is obsolete so
+  new code should use the 'ssl mode'.  Encrypt will be removed entirely starting with 6.4 (bug #48290)
 
 Version 6.2.0
 - we now cleanup idle connections in the pool, if they were not used for too long
